deleted trial fix for overflow canvas

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
   margin: auto;
   height: calc(100% - 70px); /* Adjust height to account for navbar and border thickness */
   width: 100%;
-  margin-bottom: 60px;
+
 }
 
 #game-canvas{
@@ -74,6 +74,5 @@
   height: 100%; 
   width: 100%;
   background-color: white;
-  overflow: hidden;
-  
+
 }
